--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <div id="main">
     <h1 id="title">Dr. Norman Borlaug</h1>
     <div id="img-div">
-        <img id="image" src="" alt="">
-        <div id="img-caption"></div>
+        <img id="image" src="image/tribute-page-main-image.jpg" alt="image of Dr. Norman Borlaug">
+        <div id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</div>
     </div>
     <div id="tribute-info">
             <h4>Here's a time line of Dr. Borlaug's life:</h4>
